RESOLVED FIXED267631
REGRESSION(273073@main): SourceBrush does not compile with GTK/WPE clang + stdlibc++
https://bugs.webkit.org/show_bug.cgi?id=267631
Summary REGRESSION(273073@main): SourceBrush does not compile with GTK/WPE clang + st...
Kimmo Kinnunen
Reported 2024-01-17 04:02:20 PST
REGRESSION(273073@main): SourceBrush does not compile with GTK/WPE clang + stdlibc++ https://build.webkit.org/#/builders/628/builds/13040
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-17 04:02:52 PST
Kimmo Kinnunen
Comment 2 2024-01-17 04:12:23 PST
EWS
Comment 3 2024-01-17 04:29:03 PST
Committed 273124@main (f3775def0320): <https://commits.webkit.org/273124@main> Reviewed commits have been landed. Closing PR #22861 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.