REGRESSION(273073@main): SourceBrush does not compile with GTK/WPE clang + libstdc++ https://bugs.webkit.org/show_bug.cgi?id=267631 rdar://121108528

Unreviewed build fix.

Fix the build by using variant emplace.

* Source/WebCore/platform/graphics/SourceBrush.cpp:
(WebCore::SourceBrush::setGradient):
(WebCore::SourceBrush::setPattern):

Canonical link: https://commits.webkit.org/273124@main