Source/WebCore/platform/graphics/SourceBrush.cpp
@@ -77,12 +77,12 @@ Pattern* SourceBrush::pattern() const
 
 void SourceBrush::setGradient(Ref<Gradient>&& gradient, const AffineTransform& spaceTransform)
 {
-    m_patternGradient = SourceBrushLogicalGradient { { WTFMove(gradient) }, spaceTransform };
+    m_patternGradient = SourceBrushLogicalGradient { WTFMove(gradient), spaceTransform };
 }
 
 void SourceBrush::setPattern(Ref<Pattern>&& pattern)
 {
-    m_patternGradient = WTFMove(pattern);
+    m_patternGradient.emplace<Ref<Pattern>>(WTFMove(pattern));
 }
 
 WTF::TextStream& operator<<(TextStream& ts, const SourceBrush& brush)
